@@ -43,7 +43,6 @@ require 'win32ole'
 
 ie = WIN32OLE.new('InternetExplorer.Application')
 ie.visible = true
-ie.gohome
 ie.navigate "http://google.com"
 
 while ie.busy
