@@ -1,5 +1,16 @@
 ===Change Log
 
+====2004.xxx.x
+* Fixed visible and auto_form_wrap assignments from options hash. If the
+  options were set to false in the hash, they still showed as true in IEC.
+* Added a node.focus call inside the highlight method, to ensure the control
+  is scrolled to and made visible. (applies to demo mode)
+* Updated google example code to reflect newer IEC features.
+* Wrapper for A nodes getting used for SPAN nodes because of a regex that 
+  wasn't specific enough. Fixed.
+* mozaxc scratch contrib files included in distro
+* Updated MoTunes sample app and test/demo files with minor tweaks  
+
 ====2004.006.0
 * ClIEController.form now has optional param to automatically wrap the DOM
   form instance in an IEDomFormWrapper instance. 
